--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -1,7 +1,7 @@
 <p>
   <a href="https://github.com/bscofield"><i class="fab fa-github"></i></a> &nbsp;
   <a href="https://twitter.com/bscofield"><i class="fab fa-twitter"></i></a> &nbsp;
-  <a href="mailto://me@benscofield.com"><i class="far fa-envelope"></i></a> &nbsp;
+  <a href="mailto://benscofield@turrean.com"><i class="far fa-envelope"></i></a> &nbsp;
   <a href="/posts/index.xml"><i class="fas fa-rss"></i></a>
 </p>
 
